# clanker-radio

./: .env.example  .gitignore  AI_RADIO_STATION_SOW.md  CLAUDE.md  IDEAS.md  Makefile  RADIO_STATION_IDEAS.md  README.md  deploy.sh  go.mod  pal_generated.code  pyproject.toml  test_api_fixes.py
config/: fallback.liq  radio.liq
db/: schema.sql
deploy/: bootstrap-repo.sh  cloud-init-network-config.yaml  cloud-init-user-data.yaml.template  install-cloudflared.sh  install-tailscale.sh  prepare-cloud-init.sh  proxmox-create-vm.sh
docs/: ADDING_MUSIC.md  ADMINISTRATION.md  CONFIGURATION.md  CORS_SETUP.md  DEPLOYMENT.md  DJ_TAG_NGINX_CONFIG.md  ERROR_CATALOG.md  FIXES_APPLIED.md  ICECAST_FALLBACK.md  IDEAS.md  INTEGRATION_TESTING.md  LIQUIDSOAP_SACRED_TOME.md  NOW_PLAYING_API.md  PHASE2_VALIDATION.md  PHASE3_VALIDATION.md  PHASE4_VALIDATION.md  PHASE5_COMPLETE.md  PHASE5_VALIDATION.md  PHASE6_VALIDATION.md  PHASE7_VALIDATION.md  PHASE8_VALIDATION.md  PROJECT_STATUS.md  SCRIPTS.md  SSE_INTEGRATION_GUIDE.md  TROUBLESHOOTING.md  VALIDATION_SUMMARY.md  VM_SETUP.md  blog-post.md  json-schema-workflow.md  now_playing_sequence_diagram.md  phase-4-content-generation.md  prompt-enhancements.md
migrations/: 001_add_bumper_kind.sql  008_create_show_tables.sql
nginx/: index.html  now_playing.conf  radio.conf  stream.m3u
scripts/: __init__.py  analyze_play_stats.py  api_dj_tag.py  batch_ingest.sh  batch_ingest_assets.py  check_gemini_quota.py  cleanup_old_breaks.py  debug_interference_detection.py  debug_socket.py  debug_socket2.py  debug_tts_response.py  deploy.sh  diagnose_track_selection.py  enqueue_music.py  enqueue_station_id.py  export_now_playing.py  (+24 more)
(+139 files in other folders)
