[project]
name = "ai-radio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-normalize>=1.36.0",
    "mutagen>=1.47.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
