[project]
name = "ai-radio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "fasteners>=0.20",
    "feedparser>=6.0.12",
    "ffmpeg-normalize>=1.36.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "google-genai>=1.5.2",
    "httpx>=0.28.1",
    "mutagen>=1.47.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
